# surge

./: .gitmodules
src/common/: SurgeStorage.cpp  SurgeStorage.h
src/surge-python/: CMakeLists.txt  pyproject.toml  surgepy.cpp
src/surge-python/surgepy/_surgepy/: __init__.pyi
src/surge-python/tests/: test_surgepy.py
