# Further python package details for surgepy
# See also: setup.py
[build-system]
requires = [
    "setuptools",
    "scikit-build>=0.13",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
container-engine = "podman"
build-verbosity = 3
build = [
    "cp39-manylinux_x86_64",
    "cp39-macosx_x86_64",
    "cp39-win_amd64",
    "cp39-macosx_arm64",
]
test-requires = "pytest"
test-command = "pytest {project}/src/surge-python/"
